# llm-inference-service

./: .dockerignore  .env.example  .gcloudignore  .gitignore  README.md  pyproject.toml  requirements-bench.txt  requirements-gateway.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  inference.py  main.py  schemas.py  telemetry.py
benchmarks/: __init__.py  accuracy.py  baseline_hf.py  bench_vllm.py  common.py  loadtest.js  plot.py
deploy/: Dockerfile  cloudbuild.yaml  cloudrun.yaml  entrypoint.sh
docs/: architecture.md  benchmarks.md  monitoring.md  setup-guide.md
monitoring/: alerts.yaml  grafana-dashboard.json  otel-collector.yaml
tests/: conftest.py  test_api.py  test_schemas.py  test_telemetry.py
tools/: __init__.py  fake_vllm.py
ui/: index.html
