[project]
name = "llm-inference-service"
version = "0.1.0"
description = "OpenAI-compatible inference service for Qwen2.5-7B (vLLM + FastAPI) on GCP Cloud Run"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "langfuse>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, warnings
select = ["E", "F", "I", "UP", "B", "W"]
# E501 line length is owned by the formatter; B008 is the standard FastAPI
# Depends(...) default-argument pattern.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# run tests against the source tree (so `tools` and `app` import without install)
pythonpath = ["."]
